# src/shared/openapi/generate/model/create-channel-request.ts
@@ -1,0 +1,39 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Network API
+ * API for a social network service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface CreateChannelRequest
+ */
+export interface CreateChannelRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof CreateChannelRequest
+   */
+  name?: string;
+  /**
+   *
+   * @type {string}
+   * @memberof CreateChannelRequest
+   */
+  description?: string;
+  /**
+   *
+   * @type {boolean}
+   * @memberof CreateChannelRequest
+   */
+  authRequired?: boolean;
+}
