# src/shared/openapi/generate/model/get-channel-list-request.ts
@@ -1,0 +1,39 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Network API
+ * API for a social network service
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface GetChannelListRequest
+ */
+export interface GetChannelListRequest {
+  /**
+   *
+   * @type {boolean}
+   * @memberof GetChannelListRequest
+   */
+  authRequired?: boolean;
+  /**
+   *
+   * @type {string}
+   * @memberof GetChannelListRequest
+   */
+  description?: string;
+  /**
+   *
+   * @type {string}
+   * @memberof GetChannelListRequest
+   */
+  name?: string;
+}
